--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "dependencies": {
     "firebase": "^10.14.1"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5"
   }
 }
